--- a/style.css
+++ b/style.css
@@ -495,6 +495,36 @@
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5);
 }
 
+
+
+
+
+
+
+
+
+/* Mobile Styles */
+@media (max-width: 768px) {
+    .blog-post {
+        flex: 1 1 100%; /* Full width on mobile */
+        max-width: none; /* Remove max-width constraint */
+    }
+
+    .blog-container {
+        padding: 50px 10px; /* Adjust padding for mobile */
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
 /* PAGINATION */
 .pagination {
     text-align: center;
