--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@
         font-size: 20px; /* Adjust font size for smaller screens */
         padding: 0 30px; /* Reduce padding on the sides */
         line-height: 50px; /* Adjust line height for better readability */
+        color: white;
     }
 }
 
@@ -91,10 +92,10 @@
     position: fixed;
     top: 15px;
     right: 40px;
-    font-size: 30px;
+    font-size: 40px;
     cursor: pointer;
     z-index: 1002;
-    color: white;
+    color: #3cff03;
 }
 
 /* Sidebar (Position on the right side of the screen) */
@@ -133,20 +134,20 @@
 }
 
 .sidebar-item {
-    font-size: 24px;
+    font-size: 36px;
     line-height: 60px;
 }
 
 .sidebar-item a {
-    color: white;
+    color: #3cff03;
     text-decoration: none;
     transition: color 0.3s;
 }
 
-.sidebar-item a:hover {
-    color: #3cff03;
+.sidebar-item a: click {
+    color: white;
 }
-/* Mobile Page Title */
+/* /* Mobile Page Title 
 .mobile-page-title {
     display: none; /* Hidden by default */
     text-align: center;
@@ -158,7 +159,7 @@
     left: 0;
     width: 100%;
     z-index: 1001;
-}
+} */
 
 /* Mobile Specific Styling */
 @media (max-width: 768px) {
