--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
     text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
     padding: 0 20px;
     margin-bottom: 20px; /* Space between text and subheading */
-    color: #ffffff;
+    color: #3cff03;
 }
 
 /* Vision Subheading */
