--- a/style.css
+++ b/style.css
@@ -607,11 +607,13 @@
 }
 
 
+
 .post-title {
     font-size: 36px;
     margin-bottom: 20px;
     color: #3cff03;
     text-align: center;
+    font-weight: normal; /* Ensures the text is not bold */
 }
 
 .post-date {
