--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6); /* Adjust the color and opacity as needed */
-    z-index: 1; /* Ensure it sits below the vision container */
+    /*z-index: 1;  Ensure it sits below the vision container */
 }
 
 /* Vision Container */
