--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     display: flex;
     flex-direction: column;
     background-color: #0a142d; /* Set background color */
-    /* background-image: url(1.jpg);  Add your background image here */
-    background-size: cover; /* Ensure the background image covers the entire container */
+    background-image: url(w1.jpg);  /* Add your background image here */
+    background-size: cover; /* Ensure the background image covers the entire container
     background-position: center; /* Center the background image */
     background-repeat: no-repeat; /* Prevent the image from repeating */
     background-attachment: fixed; /* Optional: Keep the background fixed when scrolling */
@@ -21,7 +21,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6); /* Adjust the color and opacity as needed */
+   /* background-color: rgba(0, 0, 0, 0.6);  Adjust the color and opacity as needed */
     z-index: 1;  /* Ensure it sits below the vision container */
 }
 
