--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     background-color: #0a142d; /* Set background color */
-    background-image: url(w1.jpg);  /* Add your background image here */
+    background-image: url(home.jpg);  /* Add your background image here */
     background-size: cover; /* Ensure the background image covers the entire container
     background-position: center; /* Center the background image */
     background-repeat: no-repeat; /* Prevent the image from repeating */
@@ -17,7 +17,7 @@
 /* Mobile-specific image */
 @media (max-width: 768px) {
     .index-body {
-        background-image: url(m1.jpg); /* Portrait/mobile image */
+        background-image: url(homemob.jpg); /* Portrait/mobile image */
         background-size: cover;
         background-position: top center;
     }
