--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     background-color: #0a142d; /* Set background color */
-    background-image: url(0.jpg);  /* Add your background image here */
+    background-image: url(home.jpg);  /* Add your background image here */
     background-size: cover; /* Ensure the background image covers the entire container
     background-position: center; /* Center the background image */
     background-repeat: no-repeat; /* Prevent the image from repeating */
