--- a/style.css
+++ b/style.css
@@ -956,7 +956,7 @@
 
 .contact-info a:hover {
     text-decoration: underline;
-    color: #33e002;
+    color: #ffffff;
 }
 
 /* Register Button - Aligned to the Left */
